# hiktemp

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
hiktemp/: __init__.py  _fetch.py  _frame.py
tests/: test_hiktemp.py
